--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-spring/web": "^9.7.3",
     "autoprefixer": "10.4.14",
     "daisyui": "^3.8.3",
     "eslint": "8.43.0",
