--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@react-spring/web": "^9.7.3",
     "autoprefixer": "10.4.14",
+    "cloudinary": "^1.41.0",
+    "cloudinary-react": "^1.8.1",
     "daisyui": "^3.8.3",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
