--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-spring/web": "^9.7.3",
     "autoprefixer": "10.4.14",
+    "bcrypt": "^5.1.1",
     "cloudinary": "^1.41.0",
     "cloudinary-react": "^1.8.1",
     "daisyui": "^3.8.3",
