--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-spring/web": "^9.7.3",
+    "apexcharts": "^3.44.0",
     "autoprefixer": "10.4.14",
     "bcrypt": "^5.1.1",
     "cloudinary": "^1.41.0",
@@ -21,6 +22,7 @@
     "next": "13.4.12",
     "postcss": "8.4.24",
     "react": "18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
     "swiper": "^10.3.1",
