--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-apexcharts": "^1.4.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
+    "react-toastify": "^9.1.3",
     "swiper": "^10.3.1",
     "tailwindcss": "3.3.2"
   }
