--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-spring/web": "^9.7.3",
+    "@vercel/analytics": "^1.1.1",
     "apexcharts": "^3.44.0",
     "autoprefixer": "10.4.14",
     "bcrypt": "^5.1.1",
